# KI-Training

./: .gitignore  .travis.yml  CMakeLists.txt  DOXYFILE  Dockerfile  README.md  generateDocumentationAndDeploy.sh  leftTeamConfig.json  left_epoch1000000.json  rightTeamConfig.json  right_epoch1000000.json  sonar-project.properties
CurrentTrainingFiles/: left.json  right.json
develop/html/: _a_i_8h_source.html  _communicator_8h_source.html  _config_check_8h_source.html  _game_8h_source.html  _member_selector_8h_source.html  _phase_manager_8h_source.html  annotated.html  classai_1_1_a_i.html  classcommunication_1_1_communicator.html  classgame_handling_1_1_member_selector.html  classgame_handling_1_1_phase_manager.html  dir_14e07faf3d815f1aca245c7d62887211.html  dir_fb35f8d28c5a1c2121d46772e18e7ebe.html  structgame_handling_1_1_timeouts.html
develop/html/search/: all_3.js  all_5.js  classes_0.js  functions_1.js  functions_7.js  search.js
master/html/: _a_i_8h_source.html  _communicator_8h_source.html  _game_8h_source.html  _game_types_8h_source.html  classai_1_1_a_i.html  classcommunication_1_1_communicator.html  classes.html  classgame_handling_1_1_game.html  classgame_handling_1_1_phase_manager.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b43036362fece0f978c3c8156df55d19.html  files.html  functions.html  functions_func.html  index.html
master/html/search/: all_3.js  all_8.js  all_b.js  classes_1.js  classes_3.js  (+5 more)
src/: main.cpp
src/AI/: AI.cpp  AI.h
src/Communication/: Communicator.cpp  Communicator.h
src/Game/: Game.cpp  Game.h  PhaseManager.cpp
